# pyKorg

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml
docs/: api_reference.rst  code_formatting.rst  conf.py  how_to_contribute.rst  index.rst
src/korg/: __init__.py  _python_interface.py
src/pyKorg/: __init__.py  _julia_import.py  _python_interface.py  julia_import.py
tests/: test_pyKorg.py
